# swarm_descriptions

./: LICENSE  README.md  pyproject.toml  test.xml
custom/: AutoMoDe.rtf  README.md  aac.argos  dependencies.txt  pos.mu
custom/docker/: Dockerfile  README.md  docker-compose.yml  start_argos.sh  start_bash.sh
custom/docker/argos_mount/: mission.argos
custom/docker/custom-loopfunctions/: CMakeLists.txt
notebooks/: figures.ipynb  mistral-finetuning-swarm.ipynb  mistral-inference-swarm.ipynb  mistral_finetuning.ipynb  mistral_inference.ipynb
ressources/: eval_result.pickle  skeleton.argos
ressources/data/: eval_datasets.pickle
ressources/data/eval_checkpoints/: checkpoint-100.pickle  checkpoint-125.pickle  checkpoint-150.pickle  checkpoint-175.pickle  checkpoint-200.pickle  checkpoint-225.pickle  checkpoint-25.pickle  checkpoint-250.pickle  checkpoint-275.pickle  checkpoint-300.pickle  checkpoint-325.pickle  checkpoint-350.pickle  checkpoint-375.pickle  checkpoint-400.pickle  checkpoint-50.pickle  checkpoint-75.pickle
scripts/: demo_elementtree.py  eval_results.py  examine_dataset.py  generate_data.py  parse_eval_datasets.py  play_with_elementtree.py  run_config_params.py  test.py
src/swarm_descriptions/: __init__.py  configfiles.py  datamodel.py  description.py  recursive_describer.py  utils.py
src/swarm_descriptions/descriptions/: __init__.py  aggregation.py  connection.py  demo.py  distribution.py  flocking.py  foraging.py
src/swarm_descriptions/mission_elements/: __init__.py  arena.py  datatypes.py  lights.py  objectives.py  robots.py
(+6 files in other folders)
