[project]
name = "swarm_descriptions"
description = "Generate AuToMoDe config files and natural language descriptions from SML-like swarm mission specifications."
version = "0.0.1"
requires-python = "==3.10.12"
dependencies=["numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"