[project]
name = "swarm_descriptions"
description = "Generate AuToMoDe config files and natural language descriptions from SML-like swarm mission specifications."
version = "0.0.1"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy","pandas", "pyyaml", "pyarrow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
